# blackheart-train

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: _inspect_signals.py
src/blackheart_train/: __init__.py  adversarial.py  artifacts.py  bayesian_search.py  bootstrap.py  cli.py  conditional_invariance.py  cost_model.py  db.py  derived_features.py  dsr.py  ensemble.py  feature_selection.py  gauntlet.py  gauntlet_directional.py  integrity.py  loader.py  meta_label.py  oof_backfill.py  regime_subcuts.py  register_client.py  search.py  settings.py  shadow_analytics.py  specs.py  stacking.py  tracking.py  train.py  walk_forward.py
tests/: test_adversarial.py  test_bayesian_search.py  test_bootstrap.py  test_cli.py  test_conditional_invariance.py  test_cost_model.py  test_derived_features.py  test_dsr.py  test_early_stopping.py  test_ensemble.py  test_feature_selection.py  test_gauntlet.py  test_gauntlet_directional.py  test_integrity.py  test_meta_label.py  test_regime_subcuts.py  test_register_client.py  test_search.py  test_seed_consistency.py  test_smoke.py  test_stacking.py  test_walk_forward.py
